# fastpy

./: .gitignore  BENCHMARK_REPORT.md  BENCHMARK_RESULTS.txt  BRIDGE_FALLBACKS.md  CLAUDE.md  FUTURE_OPTIMIZATIONS.md  KNOWN_LIMITATIONS.md  LINUX_PORT_BUGS.md  MISSING_PATTERNS.md  README.md  REFACTOR_DESIGN.md  SESSION_SUMMARY.md  STDLIB_COMPILE_BLOCKERS.md  STDLIB_TEST_RESULTS.md  UNIMPLEMENTED.md  UNSUPPORTED_MODULES.md  audit_features.py  copy_to_github.bat  pyproject.toml  python.txt  roadmap.md  setup.py  todo.txt
benchmarks/: alloc_bench.py  compile_cpp.py  run_comparison.py
compiler/: __init__.py  __main__.py  analysis.py  codegen.py  jit.py  pipeline.py  repl.py  stdlib_cache.py  toolchain.py
fastpy/: __init__.py  _fastints.c  ints.py
runtime/: bigint.c  bigint.h  build_runtime.bat  build_runtime.sh  cpython_bridge.c  gc.c  gc.h  objects.c  objects.h  runtime.c  threading.c  threading.h
tests/: _dump_ir.py  _run_scratch.py  _scratch_ast_visitor.py  _scratch_ast_visitor_min1.py  _scratch_ast_visitor_min10.py  _scratch_ast_visitor_min11.py  _scratch_ast_visitor_min12.py  _scratch_ast_visitor_min13.py  _scratch_ast_visitor_min14.py  _scratch_ast_visitor_min15.py  _scratch_ast_visitor_min16.py  _scratch_ast_visitor_min17.py  _scratch_ast_visitor_min18.py  _scratch_ast_visitor_min19.py  _scratch_ast_visitor_min2.py  _scratch_ast_visitor_min20.py  _scratch_ast_visitor_min3.py  _scratch_ast_visitor_min4.py  _scratch_ast_visitor_min5.py  _scratch_ast_visitor_min6.py  _scratch_ast_visitor_min7.py  _scratch_ast_visitor_min8.py  _scratch_ast_visitor_min9.py  (+75 more)
(+482 files in other folders)
